--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@userfront/react": "^0.2.22",
+    "apexcharts": "^3.50.0",
     "autoprefixer": "^10.4.19",
     "body-parser": "^1.20.0",
     "chart.js": "^4.4.3",
@@ -28,7 +29,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "postcss": "^8.4.39",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
+    "recharts": "^2.12.7",
     "slug": "^5.3.0",
     "tailwindcss": "^3.4.6"
   },
